grammar.js
      source_file: ($) => repeat($._expression),

      _expression: ($) =>
        choice(
          $._non_prefix_expression,
          $.prefix,
        ),

      // Expressions that don't start with a prefix operator.
      // Used as the RHS of implicit_times: between two complete expressions,
      // tokens like + - are always infix, and ! ++ -- are always postfix on the LHS.
      _implicit_times_rhs: ($) => choice($._leaf, $.group, $.freeform_evaluate, $.pattern),

      symbol: ($) => token(seq(optional("`"), repeat(seq(SYMBOL_NAME, "`")), SYMBOL_NAME)),

      integer: ($) => /([0-9]+\^\^[0-9a-zA-Z]+|[0-9]+)`{0,2}[0-9]*(\*\^-?[0-9]+)?/,

      string: ($) => /\"([^\"\\]|\\(.|\n))*\"/,

      // ## or ##n — SlotSequence
      blank: ($) =>
        prec.left(PRECEDENCE_UNDER, seq(
          "_",
          optional(token.immediate(/[a-zA-Z][a-zA-Z0-9$]*/)),
        )),

      // _. — Optional with built-in default: Optional[Blank[]]
      pattern: ($) =>
        prec(PRECEDENCE_UNDER, seq(
          field("name", $.symbol),
          field("constraint", choice($.blank, $.blank_default, $.blank_sequence, $.blank_null_sequence)),
        )),

      // f::name is MessageName[f, "name"], f::name::lang is MessageName[f, "name", "lang"]
      // The tags after :: are unquoted strings, not symbols
      message_name: ($) =>
        prec.left(PRECEDENCE_COLONCOLON, seq(
          $._expression,
          "::",
          alias(token.immediate(SYMBOL_NAME), $.message_tag),
          optional(seq(
            token.immediate("::"),
            alias(token.immediate(SYMBOL_NAME), $.message_tag),
          )),
        )),

      // 2 x or 2x is Times[2, x] (implicit multiplication)
      // Dynamic precedence -1 ensures explicit operators (infix +, -, etc.) win
      // over "implicit_times with prefix operator" when both parses are valid.
      implicit_times: ($) =>
        prec.dynamic(-1, prec.left(PRECEDENCE_FAKE_IMPLICITTIMES, seq($._expression, $._implicit_times_rhs))),

      // "Type"::["arg1", "arg2"] is TypeSpecifier["Type", "arg1", "arg2"]
      type_specifier: ($) =>
        prec.left(PRECEDENCE_COLONCOLON, seq(
          $._expression,
          "::",
          "[",
          optional(field("arguments", $._expression)),
          "]",
        )),

      // =[content] is FreeformEvaluate["content"]
      // The content between [ and ] is raw text, not parsed as expressions
      freeform_evaluate: ($) =>
        seq(
          token(seq("=", "[")),
          optional(alias(/[^\]]+/, $.freeform_content)),
          "]",
        ),

      prefix: ($) =>
        choice(
          prec(PRECEDENCE_PREFIX_BANG, seq("!", $._expression)),
          prec(PRECEDENCE_FAKE_PREFIX_BANGBANG, seq("!!", $._expression)),
          prec(PRECEDENCE_PREFIX_MINUS, seq("-", $._expression)),
          prec(PRECEDENCE_PREFIX_PLUS, seq("+", $._expression)),
          prec(PRECEDENCE_PREFIX_PLUSPLUS, seq("++", $._expression)),
          prec(PRECEDENCE_PREFIX_MINUSMINUS, seq("--", $._expression)),
          prec(PRECEDENCE_LONGNAME_NOT, seq("\\[Not]", $._expression)),
          prec(PRECEDENCE_LONGNAME_FORALL, seq("\\[ForAll]", $._expression)),
          prec(PRECEDENCE_LONGNAME_EXISTS, seq("\\[Exists]", $._expression)),
          prec(PRECEDENCE_LONGNAME_NOTEXISTS, seq("\\[NotExists]", $._expression)),
          prec(PRECEDENCE_PREFIX_LONGNAME_PLUSMINUS, seq("\\[PlusMinus]", $._expression)),
          prec(PRECEDENCE_PREFIX_LONGNAME_MINUSPLUS, seq("\\[MinusPlus]", $._expression)),
          prec(PRECEDENCE_PREFIX_LONGNAME_MINUS, seq("\\[Minus]", $._expression)),
          prec(PRECEDENCE_LONGNAME_SQRT, seq("\\[Sqrt]", $._expression)),
          prec(PRECEDENCE_LONGNAME_CUBEROOT, seq("\\[CubeRoot]", $._expression)),
          prec(PRECEDENCE_LONGNAME_DEL, seq("\\[Del]", $._expression)),
          prec(PRECEDENCE_LONGNAME_SQUARE, seq("\\[Square]", $._expression)),
          prec(PRECEDENCE_LESSLESS, seq("<<", $._expression)),
        ),

      postfix: ($) =>
        choice(
          prec(PRECEDENCE_AMP, seq($._expression, "&")),
          prec(PRECEDENCE_DOTDOT, seq($._expression, "..")),
          prec(PRECEDENCE_DOTDOTDOT, seq($._expression, "...")),
          prec(PRECEDENCE_SINGLEQUOTE, seq($._expression, "'")),
          prec(PRECEDENCE_POSTFIX_BANG, seq($._expression, "!")),
          prec(PRECEDENCE_POSTFIX_BANGBANG, seq($._expression, "!!")),
          prec(PRECEDENCE_POSTFIX_MINUSMINUS, seq($._expression, "--")),
          prec(PRECEDENCE_POSTFIX_PLUSPLUS, seq($._expression, "++")),
          prec(PRECEDENCE_FAKE_EQUALDOT, seq($._expression, "=.")),
          prec(PRECEDENCE_LONGNAME_TRANSPOSE, seq($._expression, "\\[Transpose]")),
          prec(PRECEDENCE_LONGNAME_CONJUGATE, seq($._expression, "\\[Conjugate]")),
          prec(PRECEDENCE_LONGNAME_CONJUGATETRANSPOSE, seq($._expression, "\\[ConjugateTranspose]")),
          prec(PRECEDENCE_LONGNAME_HERMITIANCONJUGATE, seq($._expression, "\\[HermitianConjugate]")),
        ),

      binary: ($) =>
        choice(
          prec.left(PRECEDENCE_EQUAL, seq($._expression, "=", $._expression)),
          prec.left(
            PRECEDENCE_COLONEQUAL,
            seq($._expression, ":=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CARETEQUAL,
            seq($._expression, "^=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CARETCOLONEQUAL,
            seq($._expression, "^:=", $._expression),
          ),
          prec.left(
            PRECEDENCE_BARMINUSGREATER,
            seq($._expression, "|->", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHCOLON,
            seq($._expression, "/:", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSLASH,
            seq($._expression, "//", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHSLASHEQUAL,
            seq($._expression, "//=", $._expression),
          ),
          prec.right(
            PRECEDENCE_PLUSEQUAL,
            seq($._expression, "+=", $._expression),
          ),
          prec.right(
            PRECEDENCE_MINUSEQUAL,
            seq($._expression, "-=", $._expression),
          ),
          prec.right(
            PRECEDENCE_STAREQUAL,
            seq($._expression, "*=", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHEQUAL,
            seq($._expression, "/=", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHDOT,
            seq($._expression, "/.", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSLASHDOT,
            seq($._expression, "//.", $._expression),
          ),
          prec.right(
            PRECEDENCE_MINUSGREATER,
            seq($._expression, "->", $._expression),
          ),
          prec.right(
            PRECEDENCE_COLONGREATER,
            seq($._expression, ":>", $._expression),
          ),
          prec.right(
            PRECEDENCE_LESSMINUSGREATER,
            seq($._expression, "<->", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSEMI,
            seq($._expression, "/;", $._expression),
          ),
          prec.left(PRECEDENCE_SLASH, seq($._expression, "/", $._expression)),
          prec.right(PRECEDENCE_CARET, seq($._expression, "^", $._expression)),
          prec.left(
            PRECEDENCE_SLASHAT,
            seq($._expression, "/@", $._expression),
          ),
          prec.right(PRECEDENCE_ATAT, seq($._expression, "@@", $._expression)),
          prec.left(
            PRECEDENCE_SLASHSLASHAT,
            seq($._expression, "//@", $._expression),
          ),
          prec.left(
            PRECEDENCE_ATATAT,
            seq($._expression, "@@@", $._expression),
          ),
          prec.right(PRECEDENCE_AT, seq($._expression, "@", $._expression)),
          prec.left(
            PRECEDENCE_INFIX_QUESTION,
            seq($._expression, "?", $._expression),
          ),
          prec.left(
            PRECEDENCE_FAKE_PATTERNCOLON,
            seq($._expression, ":", $._expression),
          ),
          prec.right(PRECEDENCE_LONGNAME_FUNCTION, seq($._expression, "\\[Function]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_RULE, seq($._expression, "\\[Rule]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_RULEDELAYED, seq($._expression, "\\[RuleDelayed]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_TWOWAYRULE, seq($._expression, "\\[TwoWayRule]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_IMPLIES, seq($._expression, "\\[Implies]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_ROUNDIMPLIES, seq($._expression, "\\[RoundImplies]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_DIRECTEDEDGE, seq($._expression, "\\[DirectedEdge]", $._expression)),
          prec.right(PRECEDENCE_LONGNAME_UNDIRECTEDEDGE, seq($._expression, "\\[UndirectedEdge]", $._expression)),
          prec.left(PRECEDENCE_GREATERGREATER, seq($._expression, ">>", $._expression)),
          prec.left(PRECEDENCE_GREATERGREATERGREATER, seq($._expression, ">>>", $._expression)),
        ),

      infix: ($) =>
        choice(
          prec.left(PRECEDENCE_COMMA, seq($._expression, ",", $._expression)),
          prec.left(PRECEDENCE_SEMI, seq($._expression, ";", $._expression)),
          prec.left(
            PRECEDENCE_TILDETILDE,
            seq($._expression, "~~", $._expression),
          ),
          prec.left(PRECEDENCE_BAR, seq($._expression, "|", $._expression)),
          prec.left(PRECEDENCE_BARBAR, seq($._expression, "||", $._expression)),
          prec.left(PRECEDENCE_AMPAMP, seq($._expression, "&&", $._expression)),
          prec.left(
            PRECEDENCE_EQUALEQUALEQUAL,
            seq($._expression, "===", $._expression),
          ),
          prec.left(
            PRECEDENCE_EQUALBANGEQUAL,
            seq($._expression, "=!=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "==", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "!=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "<", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "<=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, ">", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, ">=", $._expression),
          ),
          prec.left(
            PRECEDENCE_INFIX_PLUS,
            seq($._expression, "+", $._expression),
          ),
          prec.left(
            PRECEDENCE_INFIX_MINUS,
            seq($._expression, "-", $._expression),
          ),
          prec.left(PRECEDENCE_STAR, seq($._expression, "*", $._expression)),
          prec.left(PRECEDENCE_DOT, seq($._expression, ".", $._expression)),
          prec.left(
            PRECEDENCE_STARSTAR,
            seq($._expression, "**", $._expression),
          ),
          prec.left(
            PRECEDENCE_LESSGREATER,
            seq($._expression, "<>", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSTAR,
            seq($._expression, "/*", $._expression),
          ),
          prec.left(PRECEDENCE_ATSTAR, seq($._expression, "@*", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_EQUIVALENT, seq($._expression, "\\[Equivalent]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_OR, seq($._expression, "\\[Or]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_NOR, seq($._expression, "\\[Nor]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_XOR, seq($._expression, "\\[Xor]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_XNOR, seq($._expression, "\\[Xnor]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_AND, seq($._expression, "\\[And]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_NAND, seq($._expression, "\\[Nand]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_TIMES, seq($._expression, "\\[Times]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_INVISIBLETIMES, seq($._expression, "\\[InvisibleTimes]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_DIVIDE, seq($._expression, "\\[Divide]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_DIVIDES, seq($._expression, "\\[Divides]", $._expression)),
          prec.left(PRECEDENCE_LONGNAME_DIVISIONSLASH, seq($._expression, "\\[DivisionSlash]", $._expression)),
          prec.left(PRECEDENCE_INFIX_LONGNAME_MINUS, seq($._expression, "\\[Minus]", $._expression)),
          prec.left(PRECEDENCE_INFIX_LONGNAME_PLUSMINUS, seq($._expression, "\\[PlusMinus]", $._expression)),
          prec.left(PRECEDENCE_INFIX_LONGNAME_MINUSPLUS, seq($._expression, "\\[MinusPlus]", $._expression)),
        ),

      call: ($) =>
        prec(
          PRECEDENCE_CALL,
          seq(
            field("head", $._expression),
            "[",
            optional(field("arguments", $._expression)),
            "]",
          ),
        ),

      part: ($) =>
        prec(
          PRECEDENCE_CALL,
          seq(
            field("head", $._expression),
            "[[",
            optional(field("arguments", $._expression)),
            "]]",
          ),
        ),

      span: ($) =>
        choice(
          prec.right(
            PRECEDENCE_SEMISEMI,
            seq($._expression, ";;", $._expression),
          ),
          prec.right(
            PRECEDENCE_SEMISEMI,
            seq($._expression, ";;"),
          ),
          prec.right(
            PRECEDENCE_SEMISEMI,
            seq(";;", $._expression),
          ),
          prec.right(
            PRECEDENCE_SEMISEMI,
            ";;",
          ),
        ),

      group: ($) =>
        choice(
          seq("{", optional($._expression), "}"),
          seq("(", optional($._expression), ")"),
          seq("[", optional($._expression), "]"),
          seq("<|", optional($._expression), "|>"),
        ),
    },
  })));
